[project]
name = "alice"
version = "0.1.0"
description = ""
authors = [
    { name = "kidnixt", email = "kidnixt@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # "torch==2.5.1",          # lo instale con pip dentro del .venv
    # "torchvision==0.20.1",   # lo instale con pip dentro del .venv
    "scikit-learn",            
    "matplotlib (>=3.10.6,<4.0.0)",
    "torchinfo (>=1.8.0,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "wandb (>=0.21.3,<0.22.0)"
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
